Convert to use code style indentation with 4 spaces consistently.